--- a/FabolousUI/Pages/Park/CreateBus.cshtml
+++ b/FabolousUI/Pages/Park/CreateBus.cshtml
@@ -1,5 +1,6 @@
 ﻿@page
-@model FabolousUIV2.Pages.Park.CreateBusModel
+@model FabolousUI.Pages.Park.CreateBusModel
+
 
 <form method="post">
     <div class="border p-3 mt-4 col-8">
@@ -10,21 +11,22 @@
         
    
         <div class="row pb-2">
-            <h2 class="text-primary pl-3">Create Car</h2>
+            <h2 class="text-primary pl-3">Create Bus</h2>
             <hr />
         </div>
         <div class="container col-8">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
                 <label asp-for="@Model.MyBus.Registration"></label>
-                <input asp-for="@Model.MyBus.Registration" type="text" class="form-control" />
+                <input asp-for="@Model.MyBus.Registration" type="text" name="registration" class="form-control" />
                 <span asp-validation-for=@Model.MyBus.Registration class="text-danger"></span>
                
             </div>
              @{
-                Dictionary<string, string> newSpotDict = new Dictionary<string, string> { { "currentSpots", @Model.IncomingSpots} };
+                Dictionary<string, string> newSpotDict = new Dictionary<string, string> { { "currentSpots", @Model.IncomingSpots } };
+                
             }
-            <button type="submit" class="btn btn-primary" asp-all-route-data="newSpotDict"  style="width:150px;">Create</button>
+            <button type="submit" class="btn btn-primary" asp-all-route-data="newSpotDict" asp-route-id ="@Model.MyBus.Registration" style="width:150px;">Create</button>
             
             
         </div>
