--- a/FabolousUI/Pages/Park/Edit.cshtml
+++ b/FabolousUI/Pages/Park/Edit.cshtml
@@ -37,7 +37,7 @@
                 if(@Model.Bus == true )
                 {
                       
-                    <a asp-page="CreateBus" asp-all-route-data="newSpotsForBuses" class="btn btn-outline-info ms-3">
+                    <a asp-page="CreateBus" asp-all-route-data="newSpotsForBuses" asp-route-id ="@line.Id" class="btn btn-outline-info ms-3">
                         <i class="bi bi-emoji-smile"></i> &nbsp; Create New Bus
                     </a>
                 }
