fixat buss samt utskrift

--- a/FabolousUI/Pages/Park/CreateBus.cshtml
+++ b/FabolousUI/Pages/Park/CreateBus.cshtml
@@ -6,7 +6,7 @@
     <div class="border p-3 mt-4 col-8">
         <input asp-for="@Model.MyBus.Size" type="hidden"/>
         <input type="hidden" asp-for="@Model.MyBus.Id" />
-        <input type="hidden" asp-for="@Model.MyBus.Parkingspot" value="@Model.IncomingSpots" />
+        <input type="hidden" asp-for="@Model.MyBus.Parkingspot"  />
         <input type="hidden" asp-for="@Model.MyBus.StartTime" value="@DateTime.Now" />
         
    
