lagt till en checkoutbus som inte är färdig ännu

--- a/FabolousUI/Pages/Park/Edit.cshtml
+++ b/FabolousUI/Pages/Park/Edit.cshtml
@@ -98,7 +98,7 @@
                                     Edit
                                     <i class="bi-pencil-square"></i>
                                 </a>
-                                <a asp-page="../Checkout/CheckoutCar" asp-route-id="@secondLine.Id" class="btn btn-danger mx-2">
+                                <a asp-page="../Checkout/CheckoutBus" asp-route-id="@secondLine.Id" class="btn btn-danger mx-2">
                                     Delete
                                     <i class="bi-trash-fill"></i>
                                 </a>
