--- a/FabolousUI/Pages/Settings/Index.cshtml
+++ b/FabolousUI/Pages/Settings/Index.cshtml
@@ -20,6 +20,7 @@
                     <option value="">Select Field</option>
                     <option value="Car">Car</option>
                     <option value="Motorcycle">Motorcycle</option>                    
+                    <option value="Bus">Bus</option>                    
                     <option value="Parkinggarage">Parking Garage</option>
                 </select>
 
