added edit page for bicycle

--- a/FabolousUI/Pages/Park/Map.cshtml
+++ b/FabolousUI/Pages/Park/Map.cshtml
@@ -54,9 +54,9 @@
    
     if(value.CurrentSize == 0)
     {
-    <div class="col-1 pb-1">
+    <div class="col-1 pb-1 ">
         <div class="gridBox" data-id="">
-            <div class="logo">
+            <div class="logo ">
                     <a asp-page="Edit" asp-route-id="@value.Id" class="btn btn-info">@value.Id </a> 
             </div>
         </div>
@@ -67,7 +67,7 @@
     {
         <div class="col-1 pb-1">
         <div class="gridBox" data-id="">
-            <div class="logo">
+            <div class="logo g-0">
                     <a asp-page="Edit" asp-route-id="@value.Id" class="btn btn-primary">@value.Id </a> 
             </div>
         </div>
@@ -78,7 +78,7 @@
     {
         <div class="col-1 pb-1">
         <div class="gridBox" data-id="">
-            <div class="logo">
+            <div class="logo ">
                     <a asp-page="Edit" asp-route-id="@value.Id" class="btn btn-danger">@value.Id </a> 
             </div>
         </div>
