Fixat settings också

--- a/FabolousUI/Pages/Settings/Index.cshtml
+++ b/FabolousUI/Pages/Settings/Index.cshtml
@@ -21,7 +21,7 @@
                     <option value="Car">Car</option>
                     <option value="Motorcycle">Motorcycle</option>                    
                     <option value="Bus">Bus</option>                    
-                    <option value="Bike">Bike</option>                    
+                    <option value="Bicycle">Bicycle</option>                    
                     <option value="Parkinggarage">Parking Garage</option>
                 </select>
 
