lagt till funkton för att flytta bussar,samt frontennd för skapandet av bussar, mera tydlighet om vad sopm händer

--- a/FabolousUI/Pages/Park/CreateBus.cshtml
+++ b/FabolousUI/Pages/Park/CreateBus.cshtml
@@ -32,6 +32,7 @@
         </div>
     </div>
 </form>
+<img src="~/img/ValetService.jpg" class="img-fluid col-lg mt-5 col-xl mt-0 " style="width:300px; height:200px;" align="middle"  /><p><cite>Our valet service will handle the parking due to saftey protocol.</cite></p>
 
 @section Scripts{
     @{
