--- a/FabolousUI/Pages/Park/Edit.cshtml
+++ b/FabolousUI/Pages/Park/Edit.cshtml
@@ -112,8 +112,8 @@
                                     Delete
                                     <i class="bi-trash-fill"></i>
                                 </a>
-                                Dictionary<string, string> dv = new Dictionary<string, string> { { "Car", JsonConvert.SerializeObject(secondLine) } };
-                                <a asp-page="ReroutIndex" asp-all-route-data="dv" class="btn btn-secondary mx-2">
+                                Dictionary<string, string> dv = new Dictionary<string, string> { { "Bus", JsonConvert.SerializeObject(secondLine) } };
+                                <a asp-page="../Move/MoveBus" asp-all-route-data="dv" class="btn btn-secondary mx-2">
                                     Move
                                     <i class="bi bi-minecart-loaded"></i>
                                 </a>
